tests/paczka2/big_fuzzy/33071930.err
Error in line 1: de7hhbjntkV A959 94,9
Error in line 5: Uv5U S228 74,4
Error in line 6: CTGC A921 7,3
Error in line 4: de7hhbjntkV A921 89,5
Error in line 15: de7hhbjntkV A64 268,82
Error in line 12: CTGC A64 30,2
Error in line 13: de7hhbjntkV A64 69,3
Error in line 7: Uv5U A921 8,7
Error in line 24: de7hhbjntkV A959 47,2
Error in line 18: CTGC A959 69,2
Error in line 37: CTGC A64 2,0
Error in line 45: jCI S228 172,6
Error in line 44: Uv5U A959 93,6
Error in line 53: CTGC A959 22,5
Error in line 54: CTGC A64 59,0
Error in line 50: S228 A921 84,2
Error in line 74: Lo11 A64 41,0
Error in line 81: 8HD A64 63,2
Error in line 105: Uv5U A959 59,58
Error in line 104: Uv5U A959 47,5
Error in line 118: de7hhbjntkV S228 168,4
Error in line 125: de7hhbjntkV A959 -3,2
Error in line 123: de7hhbjntkV A959 55,5
Error in line 127: jCI A64 78,4
Error in line 147: CTGC S228 374,4
Error in line 135: Uv5U A959 40,5
Error in line 155: S228 A64 -2,1
Error in line 153: 8HD S228 427,9
Error in line 150: de7hhbjntkV A921 98,0
Error in line 162: 8HD A64 73,8
Error in line 172: 8HD A921 -3,8
Error in line 168: 8HD A921 54,3
Error in line 175: jCI S228 65,0
Error in line 170: Lo11 A959 57,7
Error in line 183: Uv5U A64 59,1
Error in line 191: 8HD S228 -3,8
Error in line 200: jCI A921 26,7
Error in line 192: S228 A64 37,0
Error in line 211: jCI A959 18,5
Error in line 221: jCI A921 30,3
Error in line 223: jCI A959 73,5
Error in line 228: S228 A921 18,7
Error in line 233: de7hhbjntkV S228 94,4
Error in line 236: 8HD S228 10,1
Error in line 232: S228 A64 71,3
